server/kust.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-express
  template:
    metadata:
      labels:
        app: hello-world-express
    spec:
      containers:
      - name: hello-world-express
        image: omaralhamad/backend:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-express-service
spec:
  type: NodePort
  selector:
    app: hello-world-express
  ports:
  - name: http
    port: 80
    targetPort: 3000
