server/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-nodejs-app
spec:
  selector:
    app: my-nodejs-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
