server/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: node-app-route
spec:
  to:
    kind: Service
    name: node-app
    weight: 100
  port:
    targetPort: 3000
  tls:
    termination: edge
